# Numerical-PDE-Solving

./: CMakeLists.txt  README.md  README.txt  finite_difference.cpp  plot_error.py  plot_fd2d.py  writer.hpp
cmake/: GetEigen.cmake
